--- a/index.html
+++ b/index.html
@@ -4,137 +4,25 @@
     <link rel="stylesheet" href="./index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Flags page</title>
 </head>
 <body>
     <main>
-        <div class="container">
-    <div id="content">
-    <ol>
-        <li>Item 1</li>
-        <li>Item 2
-            <ul>
-                <li>Item 7</li>
-                <li>Item 8</li>
-            </ul>
-        </li>
-        <li>Item 3</li>
-    </ol>
-</div>
-<div id="content1">
-    <table>
-        <table border="2">
-        <caption>T A B L E</caption>
+        <section class="flags"></section>
+        <section class="flags"></section>
+        <section class="flags"></section>
+        <section class="flags"></section>
+        <section class="flags"></section>
+        <section class="flags"></section>
+        <section class="flags"></section>
+        <section class="flags"></section>
 
-        <thead>
-            <tr>
-                <th>Entr text here</th>
-                <th>Enter text</th>
-                <th>Enter text</th>
-            </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <th>Enter text here</th>
-            <td>Enter text</td>
-            <td>Enter text</td>
-        </tr>
-        <tr>
-            <th>Enter text here</th>
-            <td>Enter Text</td>
-            <td>Enter text</td>
-        </tr>
-        <tfoot>
-            <tr>
-            <td>Enter text here</td>
-        </tr>
-        </tfoot>
-        </Table>
-</div>
-<section id="content2">
-    <form>
-        <table>
-        <tr>
-            <td>
-                Name :
-
-            </td>
-            <td>
-            <input type="text" placeholder="Name" name="">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Age :
-            </td>
-            <td>
-                <input type="Age" placeholder="Age" name="">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Gender :
-            </td>
-            <td>
-                <input type="radio" name="Gender">Male
-                <input type="radio" name="Gender">Female
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Favourite Color :
-            </td>
-            <td>
-                <input type="text" placeholder="Colour" name="">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Country :
-            </td>
-            <td>
-                <input type="text" placeholder="name of Country" name="Country">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Email:
-            </td>
-            <td>
-                <input type="mail" placeholder="Enter your email" name="email">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Comments :
-            </td>
-            <td>
-                <textarea rows="4" col="15" placeholder="Your comments"></textarea>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="submit" value="submit">
-            </td>
-        </tr>
-
-    </table>
-    </form>
-</section>
-
-
-<!-- span = adds markup to text or portion of a document -->
-<!-- div = defines a division of a document -->
-
-<h1>Look to see the difference between span and div</h1>
-    <div id="content5">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate asperiores, porro repellat repellendus pariatur aut dignissimos illum ut. Labore fugiat, nihil tenetur molestiae porro reiciendis sunt velit odio aperiam veniam!</p>
-
-        <p>
-            <span style="color: rgb(61, 177, 177);">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span> Nostrum tempore ex provident? Porro fugit dolores commodi suscipit quibusdam. Dolor, voluptatibus voluptate? Iste qui tempora, esse explicabo voluptatem quod inventore praesentium.</p>
-    </div>
-
-
-</main>
+      <section>
+        <h2 class="radial">This is a Text</h2>
+      </section>
+      <section>
+        <h2 class="conic">This is a Text</h2>
+      </section>
+    </main>
 </body>
 </html>
